test-suite/tests/ui/states/invalid/undeclared_reject.stderr
error: rejected state is not declared
 --> tests/ui/states/invalid/undeclared_reject.rs:8:21
  |
8 |     #[stated(reject(B))]
  |                     ^
